@@ -1,3 +1,7 @@
+2010-11-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* gnus-cite.el (gnus-article-natural-long-line-p): Removed.
+
 2010-11-02  Julien Danjou  <julien@danjou.info>
 
 	* nnir.el: Remove wais support.
